Inclusão do campo de avatar_name no database
