# src/app/models/User.js
@@ -9,6 +9,7 @@ class User extends Model {
         email: Sequelize.STRING,
         password: Sequelize.VIRTUAL,
         password_hash: Sequelize.STRING,
+        avatar_name: Sequelize.STRING,
       },
       {
         sequelize,
